src/app/pages/subjects/subjects.scss
@import 'variables';
@import 'mixins';

.subjects-page {
    .container {
        display: flex;
        margin: 0 auto;
        padding: 0 1.5rem;
        width: 100%;
        height: 100%;
        max-width: $boxed-width;

        @include tablet {
            flex-flow: row wrap;
        }

        @include desktop {
            flex-flow: row wrap;
        }
    }

    .container[data-manager="page-description"] {
        padding: 6rem 1.5rem;

        @include desktop {
            text-align: center;
        }

        h2 {
            font-size: 4rem;
            font-weight: 600;
            width: 100%;
        }

        p {
            font-size: 1.8rem;
            color: color(neutral-dark);
        }
    }

    .feature-block {
        overflow: hidden;
        transition: opacity 0.2s;
        margin-top: 5rem;

        @include desktop {
            opacity: 1;
        }

        .container {
            @include tablet {
                flex-flow: column nowrap;
            }
        }

        h2 {
            flex: 1 0 100%;

            @include desktop {
                text-align: center;
            }
        }
    }

    .filter {
        padding: 0.2rem 0;
        width: 100%;
    }

    .blurb {
        flex: 1 28%;
        font-size: 1.6rem;
        color: color(neutral-dark);

        @include desktop {
            text-align: center;
        }

        &:nth-child(3) {
            @include desktop {
                margin: 0 2rem;
            }
        }

        .title {
            font-size: 1.8rem;
            color: color(neutral-dark);
            font-weight: 600;

            @include desktop {
                text-align: center;
            }
        }
    }

    .books {
        background-color: lighten(color(neutral-lighter), 8%);
        padding: 8rem 0;
        position: relative;

        .strips {
            position: absolute;
            top: 0;
            left: 0;
            right: 0;
            margin-bottom: 0;

        }

        .book-category {
            flex: 1 1 auto;
            width: 100%;

            .subject {
                color: color(gray);
                font-style: italic;
                font-weight: 300;
            }
        }

        .row {
            display: flex;
            flex-flow: row wrap;
            justify-content: space-around;
            margin: 0 -1rem;
            width: 100%;

            @include tablet {
                justify-content: space-between;
            }

            @include desktop {
                justify-content: flex-start;
            }
        }

        .cover {
            width: 21rem;
            margin: 1rem;
            flex: 1 100%;
            position: relative;
            cursor: pointer;

            @include tablet {
                flex: 0 45%;
            }

            @include desktop {
                flex: 0 auto;
            }

            img {
                width: 100%;
            }
        }

        .details {
            width: 0;
            height: 0;
            overflow: hidden;
            position: absolute;
            top: 98%;
            left: -10%;
            background: color(neutral-lightest);
            transform: translate3d(0, -1rem, 0);
            opacity: 0;
            transition: opacity 0.2s, transform 0.2s;
            box-shadow: 0 0.1rem 0.3rem 0.2rem rgba(94, 96, 98, 0.1);

            &::before {
                border: 2rem solid;
                border-color: transparent transparent color(neutral-lightest);
                bottom: 100%;
                content: '';
                left: 50%;
                margin-left: -2rem;
                position: absolute;
            }

            .cta > .btn {
                width: 100%;
                font-variant: normal;
                padding: 1.5rem;
                text-transform: uppercase;
            }

            .cta > .btn:hover,
            .cta > .btn:focus {
                transform: scale3d(1, 1, 1);
                background-color: darken(color(orange), 5%);
            }
        }

        .cover:hover .details {
            @include desktop {
                overflow: initial;
                width: 120%;
                height: auto;
                opacity: 1;
                transform: translate3d(0, 0, 0);
                padding: 1.5rem;
                z-index: 1;
            }
        }
    }
}

